# k-agent

./: README.md  requirements.txt
notebooks/iclr2026/: utils.py
notebooks/iclr2026/data/: k_agent.csv
notebooks/sbrc2026/: figura2-figura-3.ipynb  figura4.ipynb  tabela2-tabela-3-literatura.ipynb  tabela2-tabela-3.ipynb
scripts/: k_agent_prompt_type.sh  k_selections.sh
scripts/utils/: k_start_ollama.sh
selection-agent/: pyproject.toml
selection-agent/selection_agent/: __init__.py  client_app.py  server_app.py  task.py
selection-agent/selection_agent/agent/: __init__.py  k_agent.py  prompts.py  schemas.py  selection_agent_strategy.py  tools.py
selection-agent/selection_agent/selections/: __init__.py  deev_selection.py  oort_selection.py  power_of_choice_selection.py  random_selection.py  random_selections.py  round_robin_selection.py  selection.py  utils.py
selection-agent/selection_agent/tasks/datasets/: __init__.py  load_mnist.py
selection-agent/selection_agent/tasks/models/: __init__.py  cnnmnist.py
selection-agent/selection_agent/utils/: getters.py  training_time.py
